--- a/pets.html
+++ b/pets.html
@@ -17,7 +17,7 @@
 <header class="header">
     <div class="container">
         <div class="header__inner">
-            <a href="index.html" class="header__logo">
+            <a href="/index.html" class="header__logo">
                 <h1 class="header__title">
                     Cozy House
                 </h1>
@@ -26,9 +26,9 @@
                 </p>
             </a>
             <ul class="header__list">
-                <li class="header__item"><a href="/publish/index.html" class="header__link p active">About the shelter</a></li>
-                <li class="header__item"><a href="/publish/pets.html" class="header__link p">Our pets</a></li>
-                <li class="header__item"><a href="#" class="header__link p">Help the shelter</a></li>
+                <li class="header__item"><a href="/index.html" class="header__link p active">About the shelter</a></li>
+                <li class="header__item"><a href="/pets.html" class="header__link p">Our pets</a></li>
+                <li class="header__item"><a href="#shelter" class="header__link p">Help the shelter</a></li>
                 <li class="header__item"><a href="#footer" class="header__link p">Contacts</a></li>
             </ul>
             <div class="header__mobile header-mobile">
@@ -38,9 +38,9 @@
                     <span></span>
                 </button>
                 <ul class="header-mobile__list">
-                    <li class="header__item"><a href="/publish/index.html" class="header__link p active">About the shelter</a></li>
-                    <li class="header__item"><a href="/publish/pets.html" class="header__link p">Our pets</a></li>
-                    <li class="header__item"><a href="#" class="header__link p">Help the shelter</a></li>
+                    <li class="header__item"><a href="/index.html" class="header__link p active">About the shelter</a></li>
+                    <li class="header__item"><a href="/pets.html" class="header__link p">Our pets</a></li>
+                    <li class="header__item"><a href="#shelter" class="header__link p">Help the shelter</a></li>
                     <li class="header__item"><a href="#footer" class="header__link p">Contacts</a></li>
                 </ul>
             </div>
