--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
     <div class="container">
         <div class="header__inner">
-            <a href="/index.html" class="header__logo">
+            <a href="./index.html" class="header__logo">
                 <h1 class="header__title">
                     Cozy House
                 </h1>
