--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 </p>
             </a>
             <ul class="header__list">
-                <li class="header__item"><a href="/index.html" class="header__link p active">About the shelter</a></li>
-                <li class="header__item"><a href="/pets.html" class="header__link p">Our pets</a></li>
+                <li class="header__item"><a href="../index.html" class="header__link p active">About the shelter</a></li>
+                <li class="header__item"><a href="../pets.html" class="header__link p">Our pets</a></li>
                 <li class="header__item"><a href="#shelter" class="header__link p">Help the shelter</a></li>
                 <li class="header__item"><a href="#footer" class="header__link p">Contacts</a></li>
             </ul>
