--- a/pets.html
+++ b/pets.html
@@ -17,7 +17,7 @@
 <header class="header">
     <div class="container">
         <div class="header__inner">
-            <a href="shelter/index.html" class="header__logo">
+            <a href="./index.html" class="header__logo">
                 <h1 class="header__title">
                     Cozy House
                 </h1>
@@ -26,8 +26,8 @@
                 </p>
             </a>
             <ul class="header__list">
-                <li class="header__item"><a href="shelter/index.html" class="header__link p active">About the shelter</a></li>
-                <li class="header__item"><a href="shelter/pets.html" class="header__link p">Our pets</a></li>
+                <li class="header__item"><a href="./index.html" class="header__link p active">About the shelter</a></li>
+                <li class="header__item"><a href="./pets.html" class="header__link p">Our pets</a></li>
                 <li class="header__item"><a href="#" class="header__link p">Help the shelter</a></li>
                 <li class="header__item"><a href="#footer" class="header__link p">Contacts</a></li>
             </ul>
@@ -38,8 +38,8 @@
                     <span></span>
                 </button>
                 <ul class="header-mobile__list">
-                    <li class="header__item"><a href="shelter/index.html" class="header__link p active">About the shelter</a></li>
-                    <li class="header__item"><a href="shelter/pets.html" class="header__link p">Our pets</a></li>
+                    <li class="header__item"><a href="./index.html" class="header__link p active">About the shelter</a></li>
+                    <li class="header__item"><a href="./pets.html" class="header__link p">Our pets</a></li>
                     <li class="header__item"><a href="#" class="header__link p">Help the shelter</a></li>
                     <li class="header__item"><a href="#footer" class="header__link p">Contacts</a></li>
                 </ul>
