feat: new logic swiper

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="description">
     <link rel="icon" href="img/icon/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="img/icon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="192x192" href="img/icon/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="img/icon/android-chrome-512x512.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.min.css">
     <title>Cozy House</title>
 </head>
@@ -16,38 +16,38 @@
 <body>
 <div class="header__wrapper">
     <header class="header">
-    <div class="container">
-        <div class="header__inner">
-            <a href="./index.html" class="header__logo">
-                <h1 class="header__title">
-                    Cozy House
-                </h1>
-                <p class="header__subtitle">
-                    Shelter for pets in Boston
-                </p>
-            </a>
-            <ul class="header__list">
-                <li class="header__item"><a href="./index.html" class="header__link p active">About the shelter</a></li>
-                <li class="header__item"><a href="./pets.html" class="header__link p">Our pets</a></li>
-                <li class="header__item"><a href="#shelter" class="header__link p">Help the shelter</a></li>
-                <li class="header__item"><a href="#footer" class="header__link p">Contacts</a></li>
-            </ul>
-            <div class="header__mobile header-mobile">
-                <button class="header-mobile__button">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </button>
-                <ul class="header-mobile__list">
-                    <li class="header__item"><a href="./index.html" class="header__link p active">About the shelter</a></li>
-                    <li class="header__item"><a href="./pets.html" class="header__link p">Our pets</a></li>
+        <div class="container">
+            <div class="header__inner">
+                <a href="/index.html" class="header__logo">
+                    <h1 class="header__title">
+                        Cozy House
+                    </h1>
+                    <p class="header__subtitle">
+                        Shelter for pets in Boston
+                    </p>
+                </a>
+                <ul class="header__list">
+                    <li class="header__item"><a href="/index.html" class="header__link p active">About the shelter</a></li>
+                    <li class="header__item"><a href="/pets.html" class="header__link p">Our pets</a></li>
                     <li class="header__item"><a href="#shelter" class="header__link p">Help the shelter</a></li>
                     <li class="header__item"><a href="#footer" class="header__link p">Contacts</a></li>
                 </ul>
+                <div class="header__mobile header-mobile">
+                    <button class="header-mobile__button">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </button>
+                    <ul class="header-mobile__list">
+                        <li class="header__item"><a href="/index.html" class="header__link p active">About the shelter</a></li>
+                        <li class="header__item"><a href="/pets.html" class="header__link p">Our pets</a></li>
+                        <li class="header__item"><a href="#shelter" class="header__link p">Help the shelter</a></li>
+                        <li class="header__item"><a href="#footer" class="header__link p">Contacts</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-</header>
+    </header>
     <section class="banner">
         <div class="container">
             <div class="banner__inner">
@@ -57,7 +57,7 @@
                         and open heart. He or she will love you more than anybody else in the world, you will see!</p>
                     <button class="primary-btn banner__btn">Make a friend</button>
                 </div>
-                <img src="img/png/start-screen-puppy.png" class="banner__photo" alt="puppy"/>
+                <img src="img/png/start-screen-puppy.png" class="banner__photo" alt="puppy">
             </div>
         </div>
     </section>
