feat: pagination slider

--- a/pets.html
+++ b/pets.html
@@ -97,13 +97,13 @@
                     </div>
                 </div>
                 <div class="friends__pagination friends-pagination">
-                    <button class="friends__button-prev"><<</button>
-                    <button class="friends__button-prev"><</button>
+                    <button class="friends__button-prev">&lt;&lt;</button>
+                    <button class="friends__button-prev">&lt;</button>
                     <div class="friends-pagination__num">
                         <p>1</p>
                     </div>
-                    <button class="friends__button-next">></button>
-                    <button class="friends__button-next">>></button>
+                    <button class="friends__button-next">&gt;</button>
+                    <button class="friends__button-next">&gt;&gt;</button>
                 </div>
             </div>
         </div>
